--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 base/installers/*.zip filter=lfs diff=lfs merge=lfs -text
 java-minimal/installers/*.zip filter=lfs diff=lfs merge=lfs -text
+common/*.zip filter=lfs diff=lfs merge=lfs -text
