--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 base/installers/*.zip filter=lfs diff=lfs merge=lfs -text
 java-minimal/installers/*.zip filter=lfs diff=lfs merge=lfs -text
 common/*.zip filter=lfs diff=lfs merge=lfs -text
+common/*.exe filter=lfs diff=lfs merge=lfs -text
